--- a/src/app.css
+++ b/src/app.css
@@ -15,7 +15,7 @@
 	}
 
 	.input {
-		@apply block my-1 w-full rounded-md shadow-sm bg-gray-100 dark:bg-slate-800 border-transparent focus:border-blurple focus:border-2 focus:bg-white focus:ring-0 font-normal disabled:cursor-not-allowed placeholder:text-gray-500 placeholder:dark:text-slate-400;
+		@apply block my-1 w-full rounded-md shadow-sm bg-gray-100 dark:bg-slate-800 border-transparent focus:ring-blurple focus:ring-2 focus:bg-white font-normal disabled:cursor-not-allowed placeholder:text-gray-500 placeholder:dark:text-slate-400 transition-colors;
 	}
 
 	.form-checkbox {
